# scorebook

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  triage.yml
docs/: design.md
src/scorebook/: game_state.py
tests/: test_game_state.py
