[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scorebook"
version = "0.1.0"
description = "On-device softball scorebook — pure domain state machine and supporting modules."
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
